//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user_list {
  userId String [pk]
  userName String [not null]
  email String [unique]
  password String [not null]
  role UserRole [not null, default: 'USER']
  status UserStatus [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  budgets budget_list [not null]
}

Table category_list {
  id Int [pk, increment]
  key String [not null]
  name String [not null]
  color String [not null]
  bg String [not null]
  balanceType Int [not null]
  displayOrder Int [not null]
  isSystem Boolean [not null, default: true]
  isDeleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  budgets budget_list [not null]

  indexes {
    (key, balanceType) [unique]
    (balanceType, displayOrder) [unique]
  }
}

Table budget_list {
  id String [pk]
  amount Int [not null]
  balanceType Int [not null]
  userId String [not null]
  categoryId Int [not null]
  content String
  date String [not null]
  createdDate DateTime [default: `now()`, not null]
  updatedDate DateTime [not null]
  deletedDate DateTime
  user user_list [not null]
  category category_list [not null]
}

Table refresh_tokens {
  id String [pk]
  tokenHash String [unique, not null]
  userId String [not null]
  expiresAt DateTime [not null]
  revokedAt DateTime
  createdAt DateTime [default: `now()`, not null]
}

Table security_question_presets {
  id Int [pk, increment]
  text String [not null]
  answers user_security_answers [not null]
}

Table user_security_answers {
  id String [pk]
  userId String [unique, not null]
  questionId Int [not null]
  answerHash String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  question security_question_presets [not null]
}

Table user_settings {
  id String [pk]
  userId String [unique, not null]
  totalAssets Int [not null, default: 0]
  monthlyIncome Int [not null, default: 0]
  paydayDay Int [not null, default: 25]
  fixedExpenses Int [not null, default: 0]
  fixedExpensesDetail Json
  savingsGoal Int [not null, default: 0]
  initialSetupCompleted Boolean [not null, default: false]
  autoFixedEnabled Boolean [not null, default: false]
  autoFixedDay Int [not null, default: 27]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table auto_fixed_log {
  id String [pk]
  userId String [not null]
  yearMonth String [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (userId, yearMonth) [unique]
  }
}

Table password_reset_tokens {
  id String [pk]
  tokenHash String [unique, not null]
  userId String [not null]
  expiresAt DateTime [not null]
  usedAt DateTime
  createdAt DateTime [default: `now()`, not null]
}

Table llm_usage {
  id String [pk]
  userId String [not null]
  feature String [not null]
  inputTokens Int [not null]
  outputTokens Int [not null]
  createdAt DateTime [default: `now()`, not null]
}

Enum UserRole {
  ADMIN
  USER
  GUEST
}

Enum UserStatus {
  ACTIVE
  INACTIVE
}

Ref: budget_list.userId > user_list.userId [delete: Cascade]

Ref: budget_list.categoryId > category_list.id

Ref: user_security_answers.questionId > security_question_presets.id